--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -265,6 +265,95 @@ input.check-toggle-round-flat:checked + label:after {
 /* HEADER-END */
 
 /* SITE-ON-UPDATE */
+#contactsModal .modal-dialog{
+    max-width: 700px;
+}
+
+#contactsModal .modal-footer .link-btn{
+    border-radius: 8px;
+    width: 100%;
+}
+
+#contactsModal .modal-footer{
+    padding: 0px 35px 35px 35px;
+    border-top: 0;
+}
+
+#contactsModal .modal-content{
+    background: transparent;
+    border: 0;
+}
+
+.info-cards{
+    display: flex;
+}
+
+.info-cards__item{
+    position: relative;
+    width: 350px;
+    height: 350px;
+    border-radius: 14px;
+    margin-right: 30px;
+}
+
+.info-cards__item:last-child{
+    margin-right: 0px;
+}
+
+.info-cards__item-text{
+    text-align: center;
+    font-size: 24px;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    white-space: nowrap;
+}
+
+.info-cards__item-text b{
+    font-weight: 700;
+}
+
+.info-cards__item-btn{
+    position: absolute;
+    left: 0;
+    bottom: 0px;
+    padding: 0 35px 35px 35px;
+    width: 100%;
+}
+
+.modal-backdrop.show{
+    opacity: 1;
+}
+
+.modal-backdrop{
+    background-color: transparent;
+    backdrop-filter: blur(4px) brightness(0.7);
+    -webkit-filter: blur(4px) ;
+    -moz-filter: blur(4px);
+    -ms-filter: blur(4px);
+    -o-filter: blur(4px);
+    filter: blur(4px);
+}
+
+/* #contactsModal .modal-body{
+    text-align: center;
+    padding: 73px 50px 53px 50px;
+    font-size: 24px;
+}
+
+#contactsModal .modal-content{
+    border-radius: 14px;
+    border: none;
+    margin-right: 30px;
+}
+
+#contactsModal .modal-content:last-child{
+    border-radius: 14px;
+    border: none;
+    margin-right: 0px;
+} */
+
 .site-on-update{
     /*padding-top: 221px;*/
     /*padding-bottom: 279px;*/
@@ -397,6 +486,7 @@ input.check-toggle-round-flat:checked + label:after {
 /* FOOTER */
 .footer{
     position: absolute;
+    z-index: 3;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
@@ -437,6 +527,8 @@ input.check-toggle-round-flat:checked + label:after {
     .link-btn{
         width: 324px;
     }
+
+    
 }
 
 
@@ -446,6 +538,33 @@ input.check-toggle-round-flat:checked + label:after {
     /*    max-width: 678px!important;*/
     /*    padding: 0px;*/
     /*}*/
+
+    .info-cards__item{
+        height: 250px;
+        margin-right: 0;
+        margin-top: 30px;
+    }
+
+    .info-cards__item:first-child{
+        margin-top: 0px;
+    }
+
+    .info-cards {
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .info-cards__item-text{
+        top: 35%;
+        font-size: 20px;
+    }
+
+    .info-cards__item-text{
+        padding: 0px 35px 20px 35px;
+    }
 
     .site-on-update{
         width: 100%;
