--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,6 +3,10 @@ body{
     font-family: "Grandis";
 }
 
+body.lock{
+    overflow: hidden;
+}
+
 :root{
     /* BG */
     --green-bg: #36954F;
@@ -13,6 +17,12 @@ body{
 
     /* TEXT-COLOR */
     --btn-text-color: #101010;
+    --text-green: #36954F;
+
+    /* SVG-COLOR */
+    --svg-green: #36954F;
+    --svg-black: #101010;
+    --svg-white: #101010;
 }
 
 h1,
@@ -46,6 +56,34 @@ li{
 ul{
     margin: 0;
     padding: 0;
+}
+
+.svg-green{
+    fill: var(--svg-green);
+}
+
+.svg-white{
+    fill: var(--svg-white);
+}
+
+.svg-black{
+    fill: var(--svg-black);
+}
+
+.path-green{
+    stroke: var(--svg-green);
+}
+
+.path-white{
+    stroke: var(--svg-white)!important;
+}
+
+.path-black{
+    stroke: var(--svg-black);
+}
+
+.text-green{
+    color: var(--text-green);
 }
 
 .link-btn{
@@ -109,6 +147,34 @@ ul{
     text-align: center;
 }
 
+.main-wrapper{
+    background: #FFFFFF;
+}
+
+.main-titles{
+    text-align: center;
+    margin-top: 96px;
+    margin-bottom: 33px;
+}
+
+.main-titles .text-in-bg{
+    font-size: 36px;
+    font-weight: 700;
+}
+
+.main-titles .text-on-text{
+    position: absolute;
+    bottom: -12px;
+    left: 50%;
+    text-transform: uppercase;
+    background-color: var(--red-bg);
+    font-size: 24px;
+    padding: 11px 15px 10px 15px;
+    border-radius: 50px;
+    transform: rotate(4deg) translateX(-50%);
+    line-height: 24px;
+}
+
 /* HEADER */
 header{
     background-color: var(--green-bg);
@@ -122,6 +188,10 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.header-nav{
+    width: 100%;
 }
 
 .header-logo{
@@ -142,6 +212,18 @@ header{
 
 .header-nav ul li:last-child{
     margin-right: 0px;
+}
+
+.header-nav ul li:nth-last-child(2){
+    margin-left: auto;
+}
+
+.header-nav ul li:nth-child(5){
+    display: none;
+}
+
+.header-nav ul li:nth-child(6){
+    display: none;
 }
 
 .header-nav ul li a{
@@ -259,6 +341,7 @@ input.check-toggle-round-flat + label:after {
 input.check-toggle-round-flat:checked + label:after {
     margin-left: 34px;
 }
+
 /* HEADER-END */
 
 /* SITE-ON-UPDATE */
@@ -333,28 +416,7 @@ input.check-toggle-round-flat:checked + label:after {
     filter: blur(4px);
 }
 
-/* #contactsModal .modal-body{
-    text-align: center;
-    padding: 73px 50px 53px 50px;
-    font-size: 24px;
-}
-
-#contactsModal .modal-content{
-    border-radius: 14px;
-    border: none;
-    margin-right: 30px;
-}
-
-#contactsModal .modal-content:last-child{
-    border-radius: 14px;
-    border: none;
-    margin-right: 0px;
-} */
-
 .site-on-update{
-    /*padding-top: 221px;*/
-    /*padding-bottom: 279px;*/
-    /*height: 100vh;*/
     display: flex;
     justify-content: center;
     align-items: center;
@@ -401,6 +463,9 @@ input.check-toggle-round-flat:checked + label:after {
 .halal-product-img{
     margin-right: 12px;
 }
+
+
+
 /* SITE-ON-UPDATE-END */
 
 /* MAIN-SLIDER */
@@ -434,8 +499,8 @@ input.check-toggle-round-flat:checked + label:after {
     left: 2%;
     right: auto;
     transform: translateY(-50%);
-    width: 50px;
-    height: 50px;
+    width: 56px;
+    height: 56px;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50px;
     background-image: url(../images/arrow-left.svg);
@@ -446,10 +511,10 @@ input.check-toggle-round-flat:checked + label:after {
 
 .main-slider-text{
     position: absolute;
-    top: 0;
+    top: 50%;
     left: 8.5%;
     z-index: 2;
-    margin-top: 153px;
+    transform: translateY(-50%);
 }
 
 .main-slider-title h1{
@@ -467,11 +532,12 @@ input.check-toggle-round-flat:checked + label:after {
     fill: #FFFFFF;
 }
 
-.swiper-slide img{
+.main-slider .swiper-slide img{
     position: absolute;
-    bottom: 0;
+    top: 50%;
     right: 0;
     z-index: 2;
+    transform: translateY(-50%);
 }
 
 .main-slider-links{
@@ -487,7 +553,110 @@ input.check-toggle-round-flat:checked + label:after {
     margin-right: 0px;
 }
 
+.main-slider .halal-product{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    display: block;
+    text-align: center;
+    padding-bottom: 32px;
+}
+
+.main-slider .halal-product-img{
+    margin-right: 0;
+    margin-bottom: 8px;
+}
+
 /* MAIN-SLIDER-END */
+
+/* PRODUCT-SLIDER */
+
+.products-slider-wrapper{
+    position: relative;
+}
+
+.octagon{
+    position: absolute;
+    top: -50%;
+    right: 25%;
+}
+
+.products-slider{
+    margin-left: 165px;
+}
+
+.products-slider.swiper .swiper-slide{
+    color: #FFF;
+    background: #000;
+    border-radius: 14px;
+    height: 350px;
+    width: 150px;
+}
+
+.swiper-slide .second-img{
+    width: 100px;
+}
+
+.swiper-slide .second-img:hover{
+    width: 350px;
+}
+
+.products-slider.swiper .swiper-slide img{
+    border-radius: 14px;
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+
+
+.products-slider.swiper .swiper-slide .second-img{
+    display: none;
+}
+
+.products-slider.swiper .swiper-slide:hover .second-img{
+    display: block;
+}
+
+.products-slider.swiper .swiper-slide:hover .first-img{
+    display: none;
+}
+
+.product-btn-next{
+    position: absolute;
+    z-index: 3;
+    bottom: 0;
+    /* bottom: -88px; */
+    left: 64px;
+    transform: translateY(0%);
+    width: 56px;
+    height: 56px;
+    background-color: #F1EFFA;
+    border-radius: 0px 14px 14px 0px;
+    background-image: url(../images/product-right-arrow.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 24px;
+}
+
+.product-btn-prev{
+    position: absolute;
+    z-index: 3;
+    bottom: 0;
+    /* bottom: -88px; */
+    left: 0;
+    transform: translateY(0%);
+    width: 56px;
+    height: 56px;
+    background-color: #F1EFFA;
+    border-radius: 14px 0px 0px 14px;
+    background-image: url(../images/product-left-arrow.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 24px;
+}
+
+/* PRODUCT-SLIDER-END */
 
 /* FOOTER */
 .footer{
@@ -511,7 +680,34 @@ input.check-toggle-round-flat:checked + label:after {
     font-size: 14px;
     opacity: .6;
 }
+
+.header-nav .copyright{
+    position: fixed;
+    bottom: 36px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    padding: 0;
+    display: none;
+}
 /* FOOTER-END */
+
+.mobile-social{
+    display: none;
+    position: fixed;
+    bottom: 86px;
+    left: 50%;
+    transform: translateX(-50%);
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 60px;
+    width: 100%;
+}
+
+.burger-icon{
+    display: none;
+}
+
 
 /*@media (max-width: 1440px) {*/
 /*    .container{*/
@@ -522,6 +718,72 @@ input.check-toggle-round-flat:checked + label:after {
 
 /* Tablet */
 @media (min-width: 768px) and (max-width: 1024px){
+    .header-nav ul li:nth-last-child(2){
+        margin-left: 0;
+    }
+    
+    .header-nav ul li:nth-child(4){
+        margin-left: auto;
+    }
+
+    /* Main-Slider */
+    .main-slider{
+        height: 928px;
+    }
+
+    .main-slider .swiper-slide img{
+        position: absolute;
+        top: 100%;
+        right: 50%;
+        z-index: 2;
+        height: 400px;
+        transform: translate(50%, -100%);
+    }
+
+    .main-slider-text{
+        position: absolute;
+        top: 0%;
+        left: 50%;
+        z-index: 2;
+        transform: translate(-50%, 0%);
+        margin-top: 35px;
+    }
+
+    .main-slider-title h1{
+        font-size: 64px;
+        line-height: 79.2px;
+        white-space: nowrap;
+        color: #101010;
+        text-align: center;
+    }
+
+    .main-slider-links{
+        margin-top: 36px;
+        justify-content: center;
+    }
+
+    .main-slider-links .link-btn{
+        margin-right: 0;
+    }
+
+    .main-slider-links .link-btn:last-child{
+        display: none;
+    }
+
+    .slider-btn-next{
+        right: 46px;
+    }
+
+    .slider-btn-prev{
+        left: 46px;
+    }
+
+    .main-slider .halal-product{
+        display: none;
+    }
+
+    /* Main-Slider-End */
+
     .site-on-update_title h1{
         font-size: 64px;
     }
@@ -536,7 +798,6 @@ input.check-toggle-round-flat:checked + label:after {
         width: 324px;
     }
 
-    
 }
 
 
@@ -546,6 +807,236 @@ input.check-toggle-round-flat:checked + label:after {
     /*    max-width: 678px!important;*/
     /*    padding: 0px;*/
     /*}*/
+
+    /* Burger-Menu */
+
+    .burger-icon{
+        display: flex;
+        align-items: center;
+        z-index: 5;
+        position: absolute;
+        width: 24px;
+        height: 16px;
+        cursor: pointer;
+    }
+
+    .burger-icon a{
+        font-weight: 500;
+        font-size: 14px;
+        margin-left: 40px;
+    }
+    
+    .burger-icon span,
+    .burger-icon::before,
+    .burger-icon::after
+    {
+        left: 4px;
+        position: absolute;
+        height: 2px;
+        width: 100%;
+        background-color: #FFFFFF;
+        border-radius: 16px;
+    }
+    
+    .burger-icon::before,
+    .burger-icon::after
+    {
+        content: "";
+    }
+    
+    .burger-icon::before{
+        top: 0;
+    }
+    
+    .burger-icon::after{
+        bottom: 0;
+    }
+    
+    .burger-icon span{
+        top: 50%;
+        transform: scale(1) translate(0px, -50%);
+    }
+
+    .burger-icon a:last-child{
+        display: none;
+    }
+
+    .burger-icon.active a:last-child{
+        display: block;
+    }
+
+    .burger-icon.active > a{
+        display: none;
+    }
+
+    .burger-icon.active span{
+        transform: scale(0) translate(0px, -50%);
+    }
+
+    .burger-icon.active::before{
+        top: 50%;
+        transform: rotate(-45deg) translate(0px, -50%);
+    }
+
+    .burger-icon.active::after{
+        bottom: 50%;
+        transform: rotate(45deg) translate(0px, 50%);
+    }
+
+    .header-nav{
+        position: fixed;
+        z-index: 5;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: var(--green-bg);
+        padding: 108px 15px 88px 15px;
+        overflow: auto;
+    }
+
+    .header-nav.active{
+        top: 0;
+    }
+
+    .header-nav::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        top: 0;
+        left: 0;
+        height: 72px;
+        background-color: var(--green-bg);
+        z-index: 2;
+    }
+
+    .header-nav ul{
+        text-align: center;
+        display: block;
+    }
+
+    .header-nav ul li{
+        font-size: 20px;
+        font-weight: 700;
+        margin-right: 0;
+        margin-bottom: 24px;
+    }
+
+    .header-nav ul li:nth-child(5){
+        display: block;
+    }
+    
+    .header-nav ul li:nth-child(6){
+        display: block;
+    }
+
+    .header-logo{
+        position: absolute;
+        top: -22px;
+        left: 50%;
+        transform: translate(-50%, 0%);
+        z-index: 5;
+    }
+
+    .switch{
+        position: absolute;
+        top: -18px;
+        right: 0px;
+        z-index: 5;
+
+    }
+
+    .header-nav.active .mobile-social{
+        display: flex;
+    }
+
+    .header-nav.active .copyright{
+        display: flex;
+    }
+
+    /* Burger-Menu-End */
+
+    .navbar-toggler:focus{
+        box-shadow: none;
+    }
+
+    header{
+        height: 72px;
+    }
+
+    .header-logo a svg{
+        width: 65px;
+        height: 48px;
+    }
+
+    /* Main-Slider */
+    .main-slider{
+        height: 100vh;
+    }
+
+    .main-slider .swiper-slide img{
+        position: absolute;
+        top: 100%;
+        right: 50%;
+        z-index: 2;
+        height: 400px;
+        transform: translate(50%, -100%);
+    }
+
+    .main-slider-text{
+        position: absolute;
+        top: 0%;
+        left: 50%;
+        z-index: 2;
+        transform: translate(-50%, 0%);
+        margin-top: 35px;
+        width: 100%;
+        padding: 0px 16px;
+    }
+
+    .main-slider-title h1{
+        font-size: 32px;
+        line-height: 35.2px;
+        white-space: nowrap;
+        color: #101010;
+        text-align: center;
+    }
+
+    .main-slider-title h1 svg{
+        width: 25px;
+        height: 25px;
+    }
+
+    .main-slider-links{
+        margin-top: 36px;
+        justify-content: center;
+    }
+
+    .main-slider-links .link-btn{
+        margin-right: 0;
+        width: 328px;
+    }
+
+    .main-slider-links .link-btn:last-child{
+        display: none;
+    }
+
+    .slider-btn-next{
+        top: 45%;
+        right: 15px;
+    }
+
+    .slider-btn-prev{
+        top: 45%;
+        left: 15px;
+    }
+
+    .main-slider .halal-product{
+        display: none;
+    }
+
+    /* Main-Slider-End */
+    
 
     .info-cards__item{
         height: 250px;
@@ -579,8 +1070,8 @@ input.check-toggle-round-flat:checked + label:after {
     }
 
     .text-on-text{
-        font-size: 22px;
-        padding: 11px 18px 10px;
+        font-size: 18px;
+        padding: 6px 16px 4px;
         line-height: 22px;
     }
 
