--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,6 +1,9 @@
 body{
     position: relative;
     font-family: "Grandis";
+    cursor: url('../images/octagon.svg'), auto;
+    height: 100vh;
+    color: #101010;
 }
 
 body.lock{
@@ -23,7 +26,7 @@ body.lock{
     /* SVG-COLOR */
     --svg-green: #36954F;
     --svg-black: #101010;
-    --svg-white: #101010;
+    --svg-white: #FFFFFF;
     --svg-yellow: #FFF212;
     --svg-blue: #F1EFFA;
 }
@@ -184,6 +187,11 @@ ul{
     border-radius: 50px;
     transform: rotate(4deg) translateX(-50%);
     line-height: 24px;
+    white-space: nowrap;
+}
+
+.about-us .main-titles .text-on-text{
+    padding: 10px 10px 12px 10px;
 }
 
 /* HEADER */
@@ -599,11 +607,11 @@ input.check-toggle-round-flat:checked + label:after {
     position: relative;
 }
 
-.octagon{
+/* .octagon{
     position: absolute;
     top: -10%;
     right: 25%;
-}
+} */
 
 .products-slider{
     margin-left: 165px;
@@ -617,7 +625,7 @@ input.check-toggle-round-flat:checked + label:after {
     transition: .2s;
 }
 
-.products-slider .swiper-slide:hover{
+.no-touch .products-slider .swiper-slide:hover{
     width: 350px;
 }
 
@@ -635,12 +643,11 @@ input.check-toggle-round-flat:checked + label:after {
 .products-slider .second-product-img{
     display: none;
     border-radius: 14px;
-    /* width: 350px; */
     height: 350px;
     color: #101010;
 }
 
-.products-slider .swiper-slide:hover .second-product-img{
+.no-touch .products-slider .swiper-slide:hover .second-product-img{
     display: block;
     position: relative;
 }
@@ -663,7 +670,7 @@ input.check-toggle-round-flat:checked + label:after {
     margin-top: 5px;
 }
 
-.products-slider.swiper .swiper-slide:hover .first-product-img{
+.no-touch .products-slider.swiper .swiper-slide:hover .first-product-img{
     display: none;
 }
 
@@ -720,6 +727,27 @@ input.check-toggle-round-flat:checked + label:after {
     object-fit: cover;
 }
 
+.main-video-modal .modal-content{
+    background-color: transparent;
+    border: 0;
+}
+
+.video-close-btn{
+    position: absolute;
+    z-index: 9999;
+    top: -60px;
+    right: -60px;
+}
+
+.main-video-container .modal-dialog{
+    max-width: 900px;
+}
+
+.main-video{
+    width: 100%;
+    height: 513px;
+}
+
 /* MAIN-VIDEO-END */
 
 /* POSTS */
@@ -738,12 +766,19 @@ input.check-toggle-round-flat:checked + label:after {
     flex-direction: column;
 }
 
+.feel-moment svg{
+    margin: 0px 2px;
+    width: 24px;
+    height: 24px;
+}
+
 .feel-moment h2{
     text-align: center;
     font-size: 60px;
     font-weight: 900;
     color: #101010;
     width: 100%;
+    letter-spacing: 2px;
 }
 
 .feel-moment-md-text{
@@ -872,6 +907,44 @@ input.check-toggle-round-flat:checked + label:after {
     display: none;
 }
 
+/* ABOUT-US-PAGE */
+
+.pages-top-img img{
+    width: 100%;
+    height: 380px;
+    object-fit: cover;
+}
+
+.about-us__text{
+    padding: 10px 0px 56px 0px;
+    width: 100%;
+}
+
+.about-us__text p{
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    /* text-align: justify; */
+}
+
+.about-us .about-us__link{
+    display: flex;
+    justify-content: center;
+}
+
+.about-us .about-us__link .link-btn{
+    width: 350px;
+}
+
+.about-us-tablet-img{
+    display: none;
+}
+
+.about-us-mobile-img{
+    display: none;
+}
+
+/* ABOUT-US-PAGE-END */
 
 /*@media (max-width: 1440px) {*/
 /*    .container{*/
@@ -1040,52 +1113,91 @@ input.check-toggle-round-flat:checked + label:after {
     
     /* Main-Slider-End */
 
+    .main-titles{
+        margin-top: 81px;
+    }
+
     /* Product-Slider */
 
-    .octagon{
-        display: none;
-    }
-
-    .products-slider .swiper-slide{
-        width: 147px;
-        height: 324px;
-    }
-
-    .products-slider .swiper-slide:hover:enabled {
-        width: 350px;
-    }
-
-    .products-slider .swiper-slide-active{
-        width: 324px;
-    }
-    
     .products-slider{
         margin-left: 45px;
     }
 
-    .products-slider .swiper-slide-active .second-product-img{
-        display: block;
+    .products-slider .swiper-slide:hover:disabled{
+        width: 350px;
+    }
+    
+    .products-slider .swiper-slide{
         border-radius: 14px;
+        width: 147px;
+        height: 324px;
+        cursor: pointer;
+        transition: .2s;
+    }
+
+    .products-slider .swiper-slide.swiper-slide-active{
         width: 324px;
         height: 324px;
-        color: #101010;
     }
 
-    .products-slider .second-product-img img{
-        height: 254px;
+    .products-slider.swiper .swiper-slide:hover:disabled .first-product-img{
+        display: none;
     }
 
-    .first-product-img{
+    .products-slider .swiper-slide .first-product-img{
         width: 147px;
         height: 324px;
     }
 
-    .products-slider .swiper-slide .second-product-img h3{
-        padding-top: 27px;
+    .products-slider .swiper-slide.swiper-slide-active .first-product-img{
+        display: none;
+    }
+    
+    .products-slider .swiper-slide .first-product-img img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+    .products-slider .swiper-slide.second-product-img{
+        display: none;
+        border-radius: 14px;
+        height: 324px;
+        color: #101010;
+    }
+    
+    .products-slider .swiper-slide:hover:disabled .second-product-img{
+        display: block;
+        position: relative;
     }
 
-    .products-slider .swiper-slide-active .first-product-img{
-        display: none;
+    .products-slider .swiper-slide.swiper-slide-active .second-product-img{
+        display: block;
+        position: relative;
+        width: 324px;
+        height: 324px;
+    }
+    
+    .products-slider .swiper-slide .second-product-img h3{
+        text-align: center;
+        padding-top: 27px;
+        font-size: 24px;
+        font-weight: 700;
+    }
+    
+    .products-slider .second-product-img img{
+        width: 100%;
+        height: 254px;
+        object-fit: contain;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        margin-top: 5px;
+    }
+
+    .products-slider .swiper-slide .second-product-img h3{
+        padding-top: 27px;
     }
 
     .product-btn-prev{
@@ -1140,6 +1252,30 @@ input.check-toggle-round-flat:checked + label:after {
         width: 324px;
     }
 
+    /* About-us */
+
+    .about-us .about-us__link .link-btn{
+        width: 324px;
+    }
+
+    .about-us-tablet-img{
+        display: block;
+    }
+
+    .about-us-desktop-img{
+        display: none;
+    }
+
+    .about-us-mobile-img{
+        display: none;
+    }
+
+    .pages-top-img img{
+        height: 280px;
+    }
+
+    /* About-us-end */
+
 }
 
 
@@ -1155,8 +1291,8 @@ input.check-toggle-round-flat:checked + label:after {
     .small-device-btn{
         display: flex;
         align-items: center;
-        justify-content: center;
-        margin-top: 56px;
+        justify-content: space-between;
+        margin: 56px 15px 0px 15px;
     }
 
     .small-device-btn .link-btn:first-child svg{
@@ -1178,7 +1314,7 @@ input.check-toggle-round-flat:checked + label:after {
 
     .small-device-btn .link-btn{
         text-align: center;
-        width: 152px;
+        width: 100%;
         height: 152px;
         margin-right: 24px;
         /* /* padding: 37px; */
@@ -1498,53 +1634,87 @@ input.check-toggle-round-flat:checked + label:after {
     }
 
     /* Product-Slider */
-
-    .products-slider .swiper-slide{
-        width: 147px;
-        height: 240px;
-    }
-
-    .products-slider .swiper-slide:hover:enabled {
-        width: 350px;
-    }
-
-    .products-slider .swiper-slide-active{
-        width: 240px;
-    }
     
     .products-slider{
         margin-left: 16px;
     }
 
-    .products-slider .swiper-slide-active .second-product-img{
-        position: relative;
-        display: block;
+    .products-slider .swiper-slide:hover:disabled{
+        width: 80px;
+    }
+    
+    .products-slider .swiper-slide{
         border-radius: 14px;
+        width: 80px;
+        height: 240px;
+        cursor: pointer;
+        transition: .2s;
+    }
+
+    .products-slider .swiper-slide.swiper-slide-active{
         width: 240px;
         height: 240px;
-        color: #101010;
     }
 
-    .products-slider .second-product-img img{
-        height: 189px;
-        margin-top: 0px;
+    .products-slider.swiper .swiper-slide:hover:disabled .first-product-img{
+        display: none;
     }
 
-    .first-product-img{
+    .products-slider .swiper-slide .first-product-img{
         width: 80px;
         height: 240px;
     }
 
-    .first-product-img img{
+    .products-slider .swiper-slide.swiper-slide-active .first-product-img{
+        display: none;
+    }
+    
+    .products-slider .swiper-slide .first-product-img img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
         border-radius: 14px;
+    }
+    
+    .products-slider .swiper-slide.second-product-img{
+        display: none;
+        border-radius: 14px;
+        height: 240px;
+        color: #101010;
+    }
+    
+    .products-slider .swiper-slide:hover:disabled .second-product-img{
+        display: block;
+        position: relative;
+    }
+
+    .products-slider .swiper-slide.swiper-slide-active .second-product-img{
+        display: block;
+        position: relative;
+        width: 240px;
+        height: 240px;
+    }
+    
+    .products-slider .swiper-slide .second-product-img h3{
+        text-align: center;
+        padding-top: 20px;
+        font-size: 24px;
+        font-weight: 700;
+    }
+    
+    .products-slider .second-product-img img{
+        width: 100%;
+        height: 189px;
+        object-fit: contain;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        margin-top: 0px;
     }
 
     .products-slider .swiper-slide .second-product-img h3{
         padding-top: 20px;
-    }
-
-    .products-slider .swiper-slide-active .first-product-img{
-        display: none;
     }
 
     .all-product-link{
@@ -1576,6 +1746,10 @@ input.check-toggle-round-flat:checked + label:after {
 
     .main-video .link-btn{
         width: 100%;
+    }
+
+    .main-video .all-product-link{
+        margin-right: 0;
     }
 
     /* Video-Img-End */
@@ -1704,6 +1878,34 @@ input.check-toggle-round-flat:checked + label:after {
     .site-on-update_item:last-child{
         margin-bottom: 0px;
     }
+
+    /* About-us */
+
+    .about-us__text{
+        padding: 0px 0px 32px 0px;
+    }
+
+    .about-us .about-us__link .link-btn{
+        width: 100%;
+    }
+
+    .pages-top-img img{
+        height: 180px;
+    }
+
+    .about-us-mobile-img{
+        display: block;
+    }
+
+    .about-us-tablet-img{
+        display: none;
+    }
+
+    .about-us-desktop-img{
+        display: none;
+    }
+
+    /* About-us-end */
 }
 
 /* Extra-Small-Mobile */
